test/fail/unop-t.rnp
~true;
---
TypeError: Expected number but got boolean
 --> fail/unop-t.rnp:1:2
  |
1 | ~true;
  |  ^^^^ Expected number but got boolean
  |
